# ur_navigation

./: README.md  lifecycle_node.py  main.bash  navigation_service.py  notepad.md  package.xml  reach_pose_action.py  setup.py  ur5e_navigation_launch.py
basic_navigation_node/: README.md  basic_navigation_launch.py  basic_navigation_node.py  setup.py
basic_navigation_node/W Requirements/: README.md  launch_lifecycle_navigation.py  launch_reach_pose_action.py  lifecycle_navigation_node.py  reach_pose_action.py  setup.py
